--- a/src/synology-server.html
+++ b/src/synology-server.html
@@ -459,8 +459,8 @@
                                                     </ul>
                                                 </li>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a> - Requires installing mono first from SynoCommunity.</li>
-                                                <li><a href="synology-server-legacy.html">32-bit (X86)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_x86.spk" href="emby-server-synology-mono_{version}_x86.spk">32-bit (X86)</a></li>
                                             </ul>
                                         </li>
                                         <li>Install Emby Server using the Synology Web interface.</li>
@@ -485,7 +485,8 @@
                                             </ul>
                                         </li>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a> - Requires installing mono first from SynoCommunity.</li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_x86.spk" href="emby-server-synology-mono_{version}_x86.spk">32-bit (X86)</a></li>
                                     </ul>
 
                                 </div>
