--- a/src/terramaster-server.html
+++ b/src/terramaster-server.html
@@ -444,37 +444,27 @@
                                         Emby Server can be installed from either the TerraMaster app store, or by manually installing the packages provided here. The version in the TerraMaster app store may sometimes be a little behind the latest due to the TerraMaster review process.
                                     </p>
 
-                                    <div><b class="instructionListHeader">TerraMaster X64</b></div>
+                                    <p><b>Emby Server for TerraMaster Manual Installation</b></p>
+
                                     <ol class="instructionList">
-                                        <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-terramaster_{version}_x86_64.tar.xz" href="emby-server-terramaster_{version}_x86_64.tar.xz">{filename}</a></li>
-                                        <li>From the TerraMaster web interface, go to Applications -> Settings. From here you can manually upload the Emby Server package for installation.</li>
-                                        <li>Start Emby server from the TerraMaster web interface</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
+                                        <li>
+                                            <div>Download and install one of the following packages depending on your TerraMaster NAS model:</div>
+                                            <ul>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-terramaster_{version}_x86_64.tpk" href="emby-server-terramaster_{version}_x86_64.tpk">64-bit</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-terramaster_{version}_aarch64.tpk" href="emby-server-terramaster_{version}_aarch64.tpk">ARMv58</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>Use the TerraMaster web interface to install the Emby Server package.</li>
+                                        <li>When the installation is over, you should see Emby appear in the TerraMaster admin interface, you can turn it on if it's not already and the launch button will take you to the install wizard.</li>
                                     </ol>
 
-                                    <div><b class="instructionListHeader">TerraMaster Arm64 (aarch64)</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-terramaster_{version}_aarch64.tar.xz" href="emby-server-terramaster_{version}_aarch64.tar.xz">{filename}</a></li>
-                                        <li>From the TerraMaster web interface, go to Applications -> Settings. From here you can manually upload the Emby Server package for installation.</li>
-                                        <li>Start Emby server from the TerraMaster web interface</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
-                                    </ol>
+                                    <p><b>Emby Server (BETA) for TerraMaster Manual Installation</b></p>
+                                    <p>To participate in Emby Server beta testing, download one of the following packages depending on your TerraMaster NAS model:</p>
+                                    <ul>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-terramaster_{version}_x86_64.tpk" href="emby-server-terramaster_{version}_x86_64.tpk">64-bit</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-terramaster_{version}_aarch64.tpk" href="emby-server-terramaster_{version}_aarch64.tpk">ARMv58</a></li>
+                                    </ul>
 
-                                    <div><b class="instructionListHeader">TerraMaster X64 - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-terramaster_{version}_x86_64.tar.xz" href="emby-server-terramaster_{version}_x86_64.tar.xz">{filename}</a></li>
-                                        <li>From the TerraMaster web interface, go to Applications -> Settings. From here you can manually upload the Emby Server package for installation.</li>
-                                        <li>Start Emby server from the TerraMaster web interface</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
-                                    </ol>
-
-                                    <div><b class="instructionListHeader">TerraMaster Arm64 (aarch64) - BETA</b></div>
-                                    <ol class="instructionList">
-                                        <li>Download <a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-terramaster_{version}_aarch64.tar.xz" href="emby-server-terramaster_{version}_aarch64.tar.xz">{filename}</a></li>
-                                        <li>From the TerraMaster web interface, go to Applications -> Settings. From here you can manually upload the Emby Server package for installation.</li>
-                                        <li>Start Emby server from the TerraMaster web interface</li>
-                                        <li>Open a web browser to http://localhost:8096</li>
-                                    </ol>
                                 </div>
                             </div>
                         </div>
