--- a/src/download.html
+++ b/src/download.html
@@ -476,9 +476,9 @@
                                             <ul style="list-style:none;margin:.5em 0 0 1em;">
                                                 <li><a href="community/index.php?/topic/60501-live-emby-with-alexa-skill" target="_blank" title="Emby for Amazon Alexa">Amazon Alexa</a></li>
                                                 <li><a href="emby-for-fire-tv.html" title="Emby for Amazon Fire TV">Amazon Fire TV</a></li>
-                                                <li><a href="emby-for-android-mobile.html" title="Emby for Android">Android</a></li>
+                                                <li><a href="emby-for-android.html" title="Emby for Android">Android</a></li>
                                                 <li><a href="emby-for-android-tv.html" title="Emby for Android TV">Android TV</a></li>
-                                                <li><a href="emby-for-android-mobile.html" title="Emby for Android Auto">Android Auto</a></li>
+                                                <li><a href="emby-for-android.html" title="Emby for Android Auto">Android Auto</a></li>
                                                 <li><a href="emby-for-appletv.html" title="Emby for Apple TV">Apple TV</a></li>
                                                 <li><a href="emby-for-chromecast.html" title="Emby for Chromecast">Chromecast</a></li>
                                                 <li><a href="emby-for-ios.html" title="Emby for iOS">iOS</a></li>
