--- a/src/emby-for-android.html
+++ b/src/emby-for-android.html
@@ -421,10 +421,10 @@
                                     </div>
                                     <h2>Download the Apk</h2>
                                     <div>
-                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/MediaBrowser.Mobile-google-armeabi-v7a-release.apk">arm7</a>
+                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/emby-android-google-armeabi-v7a-release.apk">arm7</a>
                                     </div>
                                     <div>
-                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/MediaBrowser.Mobile-google-x86-release.apk">x86</a>
+                                        <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/android/emby-android-google-x86-release.apk">x86</a>
                                     </div>
                                     <br />
                                     <div>
@@ -466,7 +466,7 @@
 
     </div>
     <!-- /FOOTER -->
-    <a class="w-toplink" href="emby-for-android-mobile.html#"><i class="mdfi_hardware_keyboard_arrow_up"></i></a>
+    <a class="w-toplink" href="emby-for-android.html#"><i class="mdfi_hardware_keyboard_arrow_up"></i></a>
     <script type="text/javascript">
         if (window.$us === undefined) window.$us = {};
         $us.canvasOptions = ($us.canvasOptions || {});
