--- a/src/sitemap.htm
+++ b/src/sitemap.htm
@@ -1398,7 +1398,7 @@
 </li><li><a href="http://emby.media/community/index.php?/tags/forums/ios/"><span class="title">ios - Tags - Forums - Emby Community</span></a>
 </li><li><a href="http://emby.media/community/index.php?/forum/94-ios/page-3"><span class="title">iOS - Emby Community - Page 3</span></a>
 </li></ul></li></ul></li></ul></li><li><a href="http://emby.media/emby-for-fire-tv.html"><span class="title">Emby for Amazon Fire TV - Emby</span></a>
-<ul><li><a href="http://emby.media/emby-for-android-mobile.html"><span class="title">Emby for Android - Emby</span></a>
+<ul><li><a href="http://emby.media/emby-for-android.html"><span class="title">Emby for Android - Emby</span></a>
 <ul><li><a href="http://emby.media/community/index.php?/forum/93-android-mobile/"><span class="title">Android Mobile - Emby Community</span></a>
 <ul><li><a href="http://emby.media/community/index.php?/topic/37887-playing-sbs-180x180-3dh-videos-in-gear-vr/"><span class="title">Playing SBS (180x180_3dh) videos in gear vr - Android Mobile - Emby Community</span></a>
 </li><li><a href="http://emby.media/community/index.php?/tags/forums/chromecast/"><span class="title">chromecast - Tags - Forums - Emby Community</span></a>
