--- a/src/terramaster-server.html
+++ b/src/terramaster-server.html
@@ -450,8 +450,8 @@
                                         <li>
                                             <div>Download and install one of the following packages depending on your TerraMaster NAS model:</div>
                                             <ul>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-terramaster_{version}_x86_64.tpk" href="emby-server-terramaster_{version}_x86_64.tpk">64-bit</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-terramaster_{version}_aarch64.tpk" href="emby-server-terramaster_{version}_aarch64.tpk">ARMv8</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby_TOS_APP_{version}_x86_64.tpk" href="emby_TOS_APP_{version}_x86_64.tpk">64-bit</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby_TOS_APP_{version}_aarch64.tpk" href="emby_TOS_APP_{version}_aarch64.tpk">ARMv8</a></li>
                                             </ul>
                                         </li>
                                         <li>Use the TerraMaster web interface to install the Emby Server package.</li>
@@ -461,8 +461,8 @@
                                     <p><b>Emby Server (BETA) for TerraMaster Manual Installation</b></p>
                                     <p>To participate in Emby Server beta testing, download one of the following packages depending on your TerraMaster NAS model:</p>
                                     <ul>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-terramaster_{version}_x86_64.tpk" href="emby-server-terramaster_{version}_x86_64.tpk">64-bit</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-terramaster_{version}_aarch64.tpk" href="emby-server-terramaster_{version}_aarch64.tpk">ARMv8</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby_TOS_APP_{version}_x86_64.tpk" href="emby_TOS_APP_{version}_x86_64.tpk">64-bit</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby_TOS_APP_{version}_aarch64.tpk" href="emby_TOS_APP_{version}_aarch64.tpk">ARMv8</a></li>
                                     </ul>
 
                                 </div>
