--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -440,7 +440,7 @@
 
                                 <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus samba48 sqlite3 libtheora libva libvpx libvorbis webp libx264 x265 dav1d libzvbi libraw ImageMagick6</code></div>
+                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva libvpx libvorbis webp libx264 x265 dav1d libzvbi libraw ImageMagick6</code></div>
                                 <br />
                                 <div><b>Install Emby Server on FreeBSD 11.2:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd11_{version}_amd64.txz">pkg add -f {url}</code></div>
