--- a/src/premiere.html
+++ b/src/premiere.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html prefix="og: https://ogp.me/ns#" class="no-touch" lang="en-US">
 <head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -528,7 +528,7 @@
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p>
-                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
+                                                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=VATAZTC9URLUW"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
                                                         <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="9900" data-locale="auto" data-zip-code="true">                                                            // <![CDATA[
@@ -910,7 +910,7 @@
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
-                                                    <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
+                                                    <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=VATAZTC9URLUW"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
                                                     <form style="margin-top: -20px;" action="https://mb3admin.com/admin/service/stripe/process" method="POST">
                                                         <script class="stripe-button" src="https://checkout.stripe.com/checkout.js" data-key="pk_live_lVflUNchyMpL5tkBP5dVPTlv" data-image="https://emby.media/community/uploads/monthly_10_2015/msg-3-0-40073400-1443887227_thumb.png" data-name="Emby" data-description="Emby Premiere Lifetime" data-amount="9900" data-locale="auto" data-zip-code="true">                                                            // <![CDATA[
 
