--- a/src/download.html
+++ b/src/download.html
@@ -454,6 +454,7 @@
                                                 <li><a href="thecus-server.html" title="Emby Server for Thecus">Thecus</a></li>
                                                 <li><a href="docker-server.html" title="Emby Server for unRAID">unRAID</a></li>
                                                 <li><a href="western-digital-server.html" title="Emby Server for Western Digital">Western Digital</a></li>
+                                                <li><a href="western-digital-server-os3.html" title="Emby Server for Western Digital">Western Digital (OS3)</a></li>
                                             </ul>
                                         </div>
                                         <div style="margin: 1.25em auto;font-size:108%;">
