--- a/src/bodyclosing.html
+++ b/src/bodyclosing.html
@@ -8,3 +8,4 @@
         defaultNotificationImage: 'https://emby.media/notificationicon.png'
     }]);
 </script>
+<script src="githubapi_1.js"></script>
