--- a/src/emby-theater-macos.html
+++ b/src/emby-theater-macos.html
@@ -425,6 +425,9 @@
                                     <p>
                                         Install in the <a href="https://itunes.apple.com/us/app/emby/id992180193?ls=1&mt=8" target="_blank">MacOS App Store</a>.
                                     </p>
+                                    <p>
+                                        Or <a href="https://github.com/MediaBrowser/Emby.Releases/raw/master/macos/Emby.app.zip" target="_blank">download and install</a> the latest version manually. While we update the version in the app store as often as we can, the downloaded version may sometimes be newer than the store version.
+                                    </p>
                                     <p style="margin-top: 2em;">
                                         Emby Theater is free to browse your media, while playback requires <a href="premiere.html">Emby Premiere</a>.
                                     </p>
@@ -459,11 +462,6 @@
                                     <p>The Emby Live TV Guide helps you find what you're looking for quickly and easily.</p>
                                     <p>
                                         <img src="resources/theater13.png">
-                                    </p>
-                                    <h2 style="margin-top: 1em;">Fast Channel Changing</h2>
-                                    <p>In-video controls make for fast and easy channel changing.</p>
-                                    <p>
-                                        <img src="resources/atv10.png">
                                     </p>
                                     <h2 style="margin-top: 1em;">Never Miss a Show with Emby DVR</h2>
                                     <p>The Emby DVR allows you to quickly schedule and manage recordings using a simple and elegant interface.</p>
