--- a/src/flatpak-server.html
+++ b/src/flatpak-server.html
@@ -404,25 +404,25 @@
 
                                         <div><b class="instructionListHeader">Emby Server - X64</b></div>
                                         <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_x86_64.flatpak" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_x86_64.flatpak">Emby Server for Flatpak</a>.</li>
+                                            <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_x86_64.tar.xz" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_x86_64.flatpak">Emby Server for Flatpak</a>.</li>
                                             <li><code style="white-space:nowrap;">flatpak install org.freedesktop.Platform/x86_64/18.08</code></li>
-                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_x86_64.flatpak">flatpak install {filename}</code></li>
+                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_x86_64.tar.xz">flatpak install {filename}</code></li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
 
                                         <div><b class="instructionListHeader">Emby Server - Arm64 (aarch64)</b></div>
                                         <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_aarch64.flatpak" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_aarch64.flatpak">Emby Server for Flatpak</a>.</li>
+                                            <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_aarch64.tar.xz" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_aarch64.flatpak">Emby Server for Flatpak</a>.</li>
                                             <li><code style="white-space:nowrap;">flatpak install org.freedesktop.Platform/aarch64/18.08</code></li>
-                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_aarch64.flatpak">flatpak install {filename}</code></li>
+                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_aarch64.tar.xz">flatpak install {filename}</code></li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
 
                                         <div><b class="instructionListHeader">Emby Server - Armv7 (armhf)</b></div>
                                         <ol class="instructionList">
-                                            <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_arm.flatpak" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_arm.flatpak">Emby Server for Flatpak</a>.</li>
+                                            <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_arm.tar.xz" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_arm.flatpak">Emby Server for Flatpak</a>.</li>
                                             <li><code style="white-space:nowrap;">flatpak install org.freedesktop.Platform/arm/18.08</code></li>
-                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_arm.flatpak">flatpak install {filename}</code></li>
+                                            <li><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-filename="emby-server-flatpak_{version}_arm.tar.xz">flatpak install {filename}</code></li>
                                             <li>Open a web browser to http://localhost:8096</li>
                                         </ol>
                                     </div>
