--- a/src/qnap-server.html
+++ b/src/qnap-server.html
@@ -448,9 +448,58 @@
                                             <ul>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap_{version}_x86_64.qpkg" href="emby-server-qnap_{version}_x86_64.qpkg">Intel/AMD 64-bit</a></li>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap_{version}_arm_64.qpkg" href="emby-server-qnap_{version}_arm_64.qpkg">ARMv8 (TS-x28, and TS-x32 Series)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap_{version}_arm-x41.qpkg" href="emby-server-qnap_{version}_arm-x41.qpkg">ARMv7 (TS-x31, and TS-x31U Series)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap_{version}_arm-x31.qpkg" href="emby-server-qnap_{version}_arm-x31.qpkg">ARMv7 (TS-x31+, TS-x31P, TS-x31P2, TS-x31X, and TS-x31XU Series)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">ARM X12, X19, X20, X21</a></li>
+
+                                                <li>
+                                                    <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">ARMv7 (TS-x31, and TS-x31U Series)</a> - Supported models (not an exhaustive list):</div>
+                                                    <ul>
+                                                        <li>TS-131K</li>
+                                                        <li>TS-131P</li>
+                                                        <li>TS-231+</li>
+                                                        <li>TS-231K</li>
+                                                        <li>TS-231P</li>
+                                                        <li>TS-231P3</li>
+                                                        <li>TS-431+</li>
+                                                        <li>TS-431K</li>
+                                                        <li>TS-431KX</li>
+                                                        <li>TS-431P3</li>
+                                                        <li>TS-431P3</li>
+                                                        <li>TS-431X</li>
+                                                        <li>TS-431X2</li>
+                                                        <li>TS-431X3</li>
+                                                        <li>TS-431XeU</li>
+                                                        <li>TS-431XU</li>
+                                                        <li>TS-431XU-RP</li>
+                                                    </ul>
+                                                </li>
+
+                                                <li>
+                                                    <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap_{version}_arm-x31.qpkg" href="emby-server-qnap_{version}_arm-x31.qpkg">ARMv7 (TS-x31+, TS-x31P, TS-x31P2, TS-x31X, and TS-x31XU Series)</a> - Supported models (not an exhaustive list):</div>
+                                                    <ul>
+                                                        <li>TS-131</li>
+                                                        <li>TS-231</li>
+                                                        <li>TS-431</li>
+                                                        <li>TS-431U</li>
+                                                    </ul>
+                                                </li>
+
+                                                <li>
+                                                    <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">ARM X12, X19, X20, X21</a> - Supported models (not an exhaustive list):</div>
+                                                    <ul>
+                                                        <li>TS-112P</li>
+                                                        <li>TS-120</li>
+                                                        <li>TS-121</li>
+                                                        <li>TS-212-E</li>
+                                                        <li>TS-212P</li>
+                                                        <li>TS-220</li>
+                                                        <li>TS-221</li>
+                                                        <li>TS-412</li>
+                                                        <li>TS-420</li>
+                                                        <li>TS-420U</li>
+                                                        <li>TS-421</li>
+                                                        <li>TS-421U</li>
+                                                    </ul>
+                                                </li>
+
                                             </ul>
                                         </li>
                                         <li>Install Emby Server using the QNAP Web interface.</li>
@@ -464,9 +513,58 @@
                                     <ul>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_x86_64.qpkg" href="emby-server-qnap_{version}_x86_64.qpkg">Intel/AMD 64-bit</a></li>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm_64.qpkg" href="emby-server-qnap_{version}_arm_64.qpkg">ARMv8 (TS-x28, and TS-x32 Series)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm-x41.qpkg" href="emby-server-qnap_{version}_arm-x41.qpkg">ARMv7 (TS-x31, and TS-x31U Series)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm-x31.qpkg" href="emby-server-qnap_{version}_arm-x31.qpkg">ARMv7 (TS-x31+, TS-x31P, TS-x31P2, TS-x31X, and TS-x31XU Series)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">ARM X12, X19, X20, X21</a></li>
+
+                                        <li>
+                                            <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">ARMv7 (TS-x31, and TS-x31U Series)</a> - Supported models (not an exhaustive list):</div>
+                                            <ul>
+                                                <li>TS-131K</li>
+                                                <li>TS-131P</li>
+                                                <li>TS-231+</li>
+                                                <li>TS-231K</li>
+                                                <li>TS-231P</li>
+                                                <li>TS-231P3</li>
+                                                <li>TS-431+</li>
+                                                <li>TS-431K</li>
+                                                <li>TS-431KX</li>
+                                                <li>TS-431P3</li>
+                                                <li>TS-431P3</li>
+                                                <li>TS-431X</li>
+                                                <li>TS-431X2</li>
+                                                <li>TS-431X3</li>
+                                                <li>TS-431XeU</li>
+                                                <li>TS-431XU</li>
+                                                <li>TS-431XU-RP</li>
+                                            </ul>
+                                        </li>
+
+
+                                        <li>
+                                            <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm-x31.qpkg" href="emby-server-qnap_{version}_arm-x31.qpkg">ARMv7 (TS-x31+, TS-x31P, TS-x31P2, TS-x31X, and TS-x31XU Series)</a> - Supported models (not an exhaustive list):</div>
+                                            <ul>
+                                                <li>TS-131</li>
+                                                <li>TS-231</li>
+                                                <li>TS-431</li>
+                                                <li>TS-431U</li>
+                                            </ul>
+                                        </li>
+
+                                        <li>
+                                            <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x19.qpkg" href="emby-server-qnap-mono_{version}_arm-x19.qpkg">ARM X12, X19, X20, X21</a> - Supported models (not an exhaustive list):</div>
+                                            <ul>
+                                                <li>TS-112P</li>
+                                                <li>TS-120</li>
+                                                <li>TS-121</li>
+                                                <li>TS-212-E</li>
+                                                <li>TS-212P</li>
+                                                <li>TS-220</li>
+                                                <li>TS-221</li>
+                                                <li>TS-412</li>
+                                                <li>TS-420</li>
+                                                <li>TS-420U</li>
+                                                <li>TS-421</li>
+                                                <li>TS-421U</li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
