--- a/src/qnap-server.html
+++ b/src/qnap-server.html
@@ -468,44 +468,14 @@
                                                 <li>
                                                     <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap_{version}_arm_64.qpkg" href="emby-server-qnap_{version}_arm_64.qpkg">ARMv8 (TS-x28, and TS-x32 Series)</a> - Supported models (not an exhaustive list):</div>
                                                     <ul class="modelList">
-                                                        <li>TS-1232PXU-RP</li>
-                                                        <li>TS-128A</li>
-                                                        <li>TS-130</li>
-                                                        <li>TS-228A</li>
-                                                        <li>TS-230</li>
-                                                        <li>TS-328</li>
-                                                        <li>TS-332X</li>
-                                                        <li>TS-432PXU</li>
-                                                        <li>TS-432PXU-RP</li>
-                                                        <li>TS-432XU</li>
-                                                        <li>TS-432XU-RP</li>
-                                                        <li>TS-832PX</li>
-                                                        <li>TS-832PXU</li>
-                                                        <li>TS-832PXU-RP</li>
-                                                        <li>TS-932PX</li>
+                                                        <li>TS-1232PXU-RP, TS-128A, TS-130, TS-228A, TS-230, TS-328, TS-332X, TS-432PXU, TS-432PXU-RP, TS-432XU, TS-432XU-RP, TS-832PX, TS-832PXU, TS-832PXU-RP, TS-932PX</li>
                                                     </ul>
                                                 </li>
 
                                                 <li>
                                                     <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">ARMv7 (TS-x31, and TS-x31U Series)</a> - Supported models (not an exhaustive list):</div>
                                                     <ul class="modelList">
-                                                        <li>TS-131K</li>
-                                                        <li>TS-131P</li>
-                                                        <li>TS-231+</li>
-                                                        <li>TS-231K</li>
-                                                        <li>TS-231P</li>
-                                                        <li>TS-231P3</li>
-                                                        <li>TS-431+</li>
-                                                        <li>TS-431K</li>
-                                                        <li>TS-431KX</li>
-                                                        <li>TS-431P3</li>
-                                                        <li>TS-431P3</li>
-                                                        <li>TS-431X</li>
-                                                        <li>TS-431X2</li>
-                                                        <li>TS-431X3</li>
-                                                        <li>TS-431XeU</li>
-                                                        <li>TS-431XU</li>
-                                                        <li>TS-431XU-RP</li>
+                                                        <li>TS-131K, TS-131P, TS-231+, TS-231K, TS-231P, TS-231P3, TS-431+, TS-431K, TS-431KX, TS-431P3, TS-431P3, TS-431X, TS-431X2, TS-431X3, TS-431XeU, TS-431XU, TS-431XU-RP</li>
                                                     </ul>
                                                 </li>
 
@@ -539,21 +509,7 @@
                                         <li>
                                             <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap_{version}_arm_64.qpkg" href="emby-server-qnap_{version}_arm_64.qpkg">ARMv8 (TS-x28, and TS-x32 Series)</a> - Supported models (not an exhaustive list):</div>
                                             <ul class="modelList">
-                                                <li>TS-1232PXU-RP</li>
-                                                <li>TS-128A</li>
-                                                <li>TS-130</li>
-                                                <li>TS-228A</li>
-                                                <li>TS-230</li>
-                                                <li>TS-328</li>
-                                                <li>TS-332X</li>
-                                                <li>TS-432PXU</li>
-                                                <li>TS-432PXU-RP</li>
-                                                <li>TS-432XU</li>
-                                                <li>TS-432XU-RP</li>
-                                                <li>TS-832PX</li>
-                                                <li>TS-832PXU</li>
-                                                <li>TS-832PXU-RP</li>
-                                                <li>TS-932PX</li>
+                                                <li>TS-1232PXU-RP, TS-128A, TS-130, TS-228A, TS-230, TS-328, TS-332X, TS-432PXU, TS-432PXU-RP, TS-432XU, TS-432XU-RP, TS-832PX, TS-832PXU, TS-832PXU-RP, TS-932PX</li>
                                             </ul>
                                         </li>
 
@@ -561,23 +517,7 @@
                                         <li>
                                             <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-qnap-mono_{version}_arm-x41.qpkg" href="emby-server-qnap-mono_{version}_arm-x41.qpkg">ARMv7 (TS-x31, and TS-x31U Series)</a> - Supported models (not an exhaustive list):</div>
                                             <ul class="modelList">
-                                                <li>TS-131K</li>
-                                                <li>TS-131P</li>
-                                                <li>TS-231+</li>
-                                                <li>TS-231K</li>
-                                                <li>TS-231P</li>
-                                                <li>TS-231P3</li>
-                                                <li>TS-431+</li>
-                                                <li>TS-431K</li>
-                                                <li>TS-431KX</li>
-                                                <li>TS-431P3</li>
-                                                <li>TS-431P3</li>
-                                                <li>TS-431X</li>
-                                                <li>TS-431X2</li>
-                                                <li>TS-431X3</li>
-                                                <li>TS-431XeU</li>
-                                                <li>TS-431XU</li>
-                                                <li>TS-431XU-RP</li>
+                                                <li>TS-131K, TS-131P, TS-231+, TS-231K, TS-231P, TS-231P3, TS-431+, TS-431K, TS-431KX, TS-431P3, TS-431P3, TS-431X, TS-431X2, TS-431X3, TS-431XeU, TS-431XU, TS-431XU-RP</li>
                                             </ul>
                                         </li>
 
