--- a/src/synology7-server.html
+++ b/src/synology7-server.html
@@ -458,7 +458,7 @@
                                                         <li>DS2015xs</li>
                                                     </ul>
                                                 </li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7-mono_{version}_armv7_legacy.spk" href="emby-server-synology7-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv7_standalone.spk" href="emby-server-synology-mono_{version}_armv7_standalone.spk">ARMv7 (all other ARMv7 models)</a></li>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7-mono_{version}_x86.spk" href="emby-server-synology7-mono_{version}_x86.spk">32-bit (X86)</a></li>
                                             </ul>
                                         </li>
@@ -483,7 +483,7 @@
                                                 <li>DS2015xs</li>
                                             </ul>
                                         </li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7-mono_{version}_armv7_legacy.spk" href="emby-server-synology7-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv7_standalone.spk" href="emby-server-synology-mono_{version}_armv7_standalone.spk">ARMv7 (all other ARMv7 models)</a></li>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7-mono_{version}_x86.spk" href="emby-server-synology7-mono_{version}_x86.spk">32-bit (X86)</a></li>
                                     </ul>
 
