--- a/src/western-digital-server-os3.html
+++ b/src/western-digital-server-os3.html
@@ -429,7 +429,7 @@
             <div class="l-submain for_pagehead color_alternate size_large" style="padding-top: 140px;">
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
-                        <h1>Emby Server for Western Digital NAS</h1>
+                        <h1>Emby Server for Western Digital NAS (OS3)</h1>
                     </div>
                 </div>
             </div>
