--- a/src/emby-theater-linux.html
+++ b/src/emby-theater-linux.html
@@ -427,6 +427,26 @@
                                     </div>
 
                                     <h2>Installation</h2>
+                                    <div>
+                                        <a href="#deb">Debian</a>
+                                    </div>
+                                    <div>
+                                        <a href="#deb">Linux Mint</a>
+                                    </div>
+                                    <div>
+                                        <a href="#deb">Ubuntu</a>
+                                    </div>
+                                    <h2><a style="color:inherit;" name="deb">Debian / Ubuntu / Linux Mint</a></h2>
+                                    <div>Download one of the following packages based on your system architecture:</div>
+                                    <ul style="margin:.5em 0 1em 2em;">
+                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_amd64.deb" title="Emby Theater for X64">X64</a></li>
+                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_arm64.deb" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
+                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_armhf.deb" title="Emby Theater for Armv7 (armhf)">Armv7 (armhf)</a></li>
+                                    </ul>
+                                    <div>Install Steps</div>
+                                    <div><code>sudo apt-get update</code></div>
+                                    <div><code>sudo apt-get install cec-utils libasound2 libatomic1 libc6 libegl1 libgcc-s1 libpulse0 libstdc++6</code></div>
+                                    <div><code>sudo dpkg -i /path/to/deb</code></div>
                                 </div>
                             </div>
                         </div>
